# syncker

./: .gitignore  LICENSE  README.md  gdrive.py  main.py  oauth.py  pyproject.toml  requirements.txt
src/: gdrive.py  main.py
